# qbscanner

./: .gitignore  README.md  build.py  pyproject.toml  test.py  test_binary  test_fileio.c
qbscanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: bitmap_renderer.cpp  bitmap_renderer.h  platform.h  platform_linux.cpp  platform_windows.cpp  qbscanner.cpp  visualizer.cpp  visualizer.h
test-programs/: fileio.c  multiprocess.c  network.c  sample.txt  shell.sh
