[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qbscanner"
version = "1.0.0"
description = "QEMU-based behavior monitoring tool for security research"
authors = [
    {name = "QBScanner Team", email = "qbscanner@example.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://github.com/qbscanner/qbscanner"
Repository = "https://github.com/qbscanner/qbscanner.git"
Issues = "https://github.com/qbscanner/qbscanner/issues"

[project.scripts]
qbscanner-build = "build:main"

[tool.setuptools]
packages = []